[project]
name = "bootstrap4markdown"
description = "A Python-Markdown extension which provides a simple syntax for including Bootstrap objects within a Markdown document."
version = "0.0.1"
dependencies = [
    'pymdown-extensions>=9.10',
]
readme = 'README.md'
license = {file = "LICENSE"}
authors = [{name = 'Waylan Limberg'}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
repository = "https://github.com/waylan/bootstrap4markdown.py"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
